--- a/lesson_3_2.ipynb
+++ b/lesson_3_2.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
       "Model:                            OLS   Adj. R-squared (uncentered):              0.984\n",
       "Method:                 Least Squares   F-statistic:                              2238.\n",
       "Date:                Wed, 20 Mar 2024   Prob (F-statistic):                   2.25e-124\n",
-      "Time:                        20:24:45   Log-Likelihood:                         -565.79\n",
+      "Time:                        20:46:53   Log-Likelihood:                         -565.79\n",
       "No. Observations:                 142   AIC:                                      1140.\n",
       "Df Residuals:                     138   BIC:                                      1151.\n",
       "Df Model:                           4                                                  \n",
@@ -120,7 +120,7 @@
     "model = sm.OLS(y, X).fit()\n",
     "\n",
     "# Exibir um resumo dos resultados da regressão\n",
-    "print(model.summary())\n"
+    "print(model.summary())"
    ]
   }
  ],
@@ -131,15 +131,7 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
    "version": "3.10.12"
   }
  },
