all tests on lesson 4

--- a/lesson_4.ipynb
+++ b/lesson_4.ipynb
@@ -124,6 +124,141 @@
     "#Command on STATA 18:\n",
     "# reg selic cambio industria igpm, noc"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:             rendimento   R-squared:                       0.286\n",
+      "Model:                            OLS   Adj. R-squared:                  0.270\n",
+      "Method:                 Least Squares   F-statistic:                     18.42\n",
+      "Date:                Wed, 27 Mar 2024   Prob (F-statistic):           4.13e-10\n",
+      "Time:                        21:43:30   Log-Likelihood:                -889.17\n",
+      "No. Observations:                 142   AIC:                             1786.\n",
+      "Df Residuals:                     138   BIC:                             1798.\n",
+      "Df Model:                           3                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const       3829.5027    151.375     25.298      0.000    3530.188    4128.817\n",
+      "cambio        -8.6767     11.023     -0.787      0.433     -30.473      13.119\n",
+      "industria     -7.8427      1.192     -6.580      0.000     -10.199      -5.486\n",
+      "igpm           7.6288     11.295      0.675      0.501     -14.704      29.962\n",
+      "==============================================================================\n",
+      "Omnibus:                        3.564   Durbin-Watson:                   0.511\n",
+      "Prob(Omnibus):                  0.168   Jarque-Bera (JB):                4.127\n",
+      "Skew:                          -0.045   Prob(JB):                        0.127\n",
+      "Kurtosis:                       3.830   Cond. No.                     1.48e+03\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The condition number is large, 1.48e+03. This might indicate that there are\n",
+      "strong multicollinearity or other numerical problems.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import statsmodels.api as sm\n",
+    "\n",
+    "# Carregar os dados do arquivo .dta\n",
+    "df = pd.read_stata('lesson_3.dta')\n",
+    "\n",
+    "# Definir a variável dependente e as variáveis independentes\n",
+    "y = df['rendimento']\n",
+    "X = df[['cambio', 'industria', 'igpm']]\n",
+    "\n",
+    "# Adicionar uma constante aos preditores para o intercepto\n",
+    "X = sm.add_constant(X)\n",
+    "\n",
+    "# Ajustar o modelo de regressão linear\n",
+    "model = sm.OLS(y, X).fit()\n",
+    "\n",
+    "# Exibir um resumo dos resultados da regressão\n",
+    "print(model.summary())\n",
+    "\n",
+    "#Command on STATA 18:\n",
+    "# reg rendimento cambio industria igpm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                   igpm   R-squared:                       0.048\n",
+      "Model:                            OLS   Adj. R-squared:                  0.042\n",
+      "Method:                 Least Squares   F-statistic:                     7.113\n",
+      "Date:                Wed, 27 Mar 2024   Prob (F-statistic):            0.00855\n",
+      "Time:                        22:03:36   Log-Likelihood:                -195.41\n",
+      "No. Observations:                 142   AIC:                             394.8\n",
+      "Df Residuals:                     140   BIC:                             400.7\n",
+      "Df Model:                           1                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const         -0.0681      0.267     -0.256      0.799      -0.595       0.459\n",
+      "cambio         0.1806      0.068      2.667      0.009       0.047       0.315\n",
+      "==============================================================================\n",
+      "Omnibus:                       11.713   Durbin-Watson:                   0.692\n",
+      "Prob(Omnibus):                  0.003   Jarque-Bera (JB):               20.770\n",
+      "Skew:                           0.358   Prob(JB):                     3.09e-05\n",
+      "Kurtosis:                       4.732   Cond. No.                         13.7\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import statsmodels.api as sm\n",
+    "\n",
+    "# Carregar os dados do arquivo .dta\n",
+    "df = pd.read_stata('lesson_3.dta')\n",
+    "\n",
+    "# Definir a variável dependente e as variáveis independentes\n",
+    "y = df['igpm']\n",
+    "X = df[['cambio']]\n",
+    "\n",
+    "# Adicionar uma constante aos preditores para o intercepto\n",
+    "X = sm.add_constant(X)\n",
+    "\n",
+    "# Ajustar o modelo de regressão linear\n",
+    "model = sm.OLS(y, X).fit()\n",
+    "\n",
+    "# Exibir um resumo dos resultados da regressão\n",
+    "print(model.summary())\n",
+    "\n",
+    "#Command on STATA 18:\n",
+    "# reg igpm cambio"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Significante ou não?\n",
+    "Relação direta ou inversa?\n",
+    "Intensidade de Transmissão?"
+   ]
   }
  ],
  "metadata": {
