--- a/lesson_7.ipynb
+++ b/lesson_7.ipynb
@@ -2,43 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                 OLS Regression Results                                \n",
-      "=======================================================================================\n",
-      "Dep. Variable:          endividamento   R-squared (uncentered):                   0.993\n",
-      "Model:                            OLS   Adj. R-squared (uncentered):              0.993\n",
-      "Method:                 Least Squares   F-statistic:                              4186.\n",
-      "Date:                Wed, 26 Jun 2024   Prob (F-statistic):                   2.11e-157\n",
-      "Time:                        20:15:27   Log-Likelihood:                         -406.41\n",
-      "No. Observations:                 153   AIC:                                      822.8\n",
-      "Df Residuals:                     148   BIC:                                      838.0\n",
-      "Df Model:                           5                                                  \n",
-      "Covariance Type:            nonrobust                                                  \n",
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:          endividamento   R-squared:                       0.943\n",
+      "Model:                            OLS   Adj. R-squared:                  0.941\n",
+      "Method:                 Least Squares   F-statistic:                     399.7\n",
+      "Date:                Wed, 26 Jun 2024   Prob (F-statistic):           1.56e-87\n",
+      "Time:                        20:45:03   Log-Likelihood:                -218.80\n",
+      "No. Observations:                 152   AIC:                             451.6\n",
+      "Df Residuals:                     145   BIC:                             472.8\n",
+      "Df Model:                           6                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
       "===============================================================================\n",
       "                  coef    std err          t      P>|t|      [0.025      0.975]\n",
       "-------------------------------------------------------------------------------\n",
-      "spreadrlpf      2.0025      0.082     24.376      0.000       1.840       2.165\n",
-      "reclivrepf   2.013e-05   5.65e-07     35.648      0.000     1.9e-05    2.12e-05\n",
-      "selic          12.4503      3.724      3.343      0.001       5.091      19.809\n",
-      "selicdef_-1    -3.6747      3.709     -0.991      0.323     -11.004       3.654\n",
-      "selicdef_-2   -16.5496      3.802     -4.352      0.000     -24.064      -9.036\n",
+      "const          32.0146      0.882     36.302      0.000      30.272      33.758\n",
+      "spreadrlpf     -0.2029      0.068     -2.978      0.003      -0.338      -0.068\n",
+      "reclivrepf   9.331e-06   3.36e-07     27.791      0.000    8.67e-06    9.99e-06\n",
+      "selic           7.1323      1.142      6.248      0.000       4.876       9.389\n",
+      "selicdef_-1     4.3809      1.221      3.589      0.000       1.968       6.794\n",
+      "selicdef_-2    -2.3140      1.242     -1.863      0.064      -4.769       0.141\n",
+      "selicdef_-3    -6.5627      1.160     -5.656      0.000      -8.856      -4.269\n",
       "==============================================================================\n",
-      "Omnibus:                       11.589   Durbin-Watson:                   0.385\n",
-      "Prob(Omnibus):                  0.003   Jarque-Bera (JB):                5.036\n",
-      "Skew:                          -0.176   Prob(JB):                       0.0806\n",
-      "Kurtosis:                       2.184   Cond. No.                     1.78e+07\n",
+      "Omnibus:                        0.984   Durbin-Watson:                   0.368\n",
+      "Prob(Omnibus):                  0.611   Jarque-Bera (JB):                1.030\n",
+      "Skew:                           0.188   Prob(JB):                        0.598\n",
+      "Kurtosis:                       2.856   Cond. No.                     1.96e+07\n",
       "==============================================================================\n",
       "\n",
       "Notes:\n",
-      "[1] R² is computed without centering (uncentered) since the model does not contain a constant.\n",
-      "[2] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-      "[3] The condition number is large, 1.78e+07. This might indicate that there are\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The condition number is large, 1.96e+07. This might indicate that there are\n",
       "strong multicollinearity or other numerical problems.\n"
      ]
     }
@@ -52,10 +53,23 @@
     "\n",
     "df['selicdef_-1'] = df['selic'].shift(1)\n",
     "df['selicdef_-2'] = df['selic'].shift(2)\n",
+    "df['selicdef_-3'] = df['selic'].shift(3)\n",
+    "df['selicdef_-4'] = df['selic'].shift(4)\n",
+    "df['selicdef_-5'] = df['selic'].shift(5)\n",
+    "df['selicdef_-6'] = df['selic'].shift(6)\n",
+    "df['selicdef_-7'] = df['selic'].shift(7)\n",
+    "df['selicdef_-8'] = df['selic'].shift(8)\n",
+    "df['selicdef_-9'] = df['selic'].shift(9)\n",
+    "df['selicdef_-10'] = df['selic'].shift(10)\n",
+    "df['selicdef_-11'] = df['selic'].shift(11)\n",
     "\n",
     "# Define the dependent variable and the independent variables\n",
     "y_subset = ['endividamento']\n",
-    "x_subset = ['spreadrlpf', 'reclivrepf', 'selic', 'selicdef_-1', 'selicdef_-2']\n",
+    "\n",
+    "x_subset = ['spreadrlpf', 'reclivrepf', 'selic', 'selicdef_-1', 'selicdef_-2', 'selicdef_-3']\n",
+    "#x_subset = ['spreadrlpf', 'reclivrepf', 'selic', 'selicdef_-2', 'selicdef_-3', 'selicdef_-4', 'selicdef_-5', 'selicdef_-6', 'selicdef_-7', 'selicdef_-8', 'selicdef_-9', 'selicdef_-10', 'selicdef_-11']\n",
+    "\n",
+    "\n",
     "\n",
     "# Create a list of all columns to check for NaNs\n",
     "subset_check = y_subset + x_subset\n",
@@ -68,13 +82,33 @@
     "X_filtered = df_filtered[x_subset]\n",
     "\n",
     "# Add a constant to the predictors for the intercept\n",
-    "#X_filtered = sm.add_constant(X_filtered)\n",
+    "X_filtered = sm.add_constant(X_filtered)\n",
     "\n",
     "# Fit the linear regression model\n",
     "model = sm.OLS(y_filtered, X_filtered).fit()\n",
     "\n",
     "# Display a summary of the regression results\n",
     "print(model.summary())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "48.812"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_10 = df['endividamento'].quantile(0.9)"
    ]
   },
   {
